fixed out of box duration tag on small screens

--- a/src/components/video/_video.scss
+++ b/src/components/video/_video.scss
@@ -3,7 +3,6 @@
 .video {
   margin-bottom: 1rem;
   padding: 0.7rem;
-
   font-weight: 500;
   font-size: 0.9rem;
 
@@ -12,6 +11,9 @@
   &__top {
     margin-bottom: 0.5rem;
     position: relative;
+    .lazy-load-image-background {
+      width: 100%;
+    }
     img {
       width: 100%;
     }
